Put city temp rainfall humidity and wind spreed

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,6 @@
 $mainFontFamily: 'Oswald', sans-serif;
 $headerFontFamily:'Rubik', sans-serif;
 
-$titleColor:#2a4e96;
+$titleColor:#fff;
+$inputBorderColor:#000;
+$inputBorderColorError:#e92020;
